infrastructure/kubernetes/apps/base/identity/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agro-apps
  labels:
    project: tc-agro-solutions
    managed-by: argocd
